<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Find a Doctor</string>
    <string name="menu">Menu</string>
    <string name="logo">Logo</string>
    <string name="notification">Notification</string>
    <string name="credit">Credit</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_appointments">Appointments</string>
    <string name="nav_medical_records">Medical Records</string>
    <string name="nav_helpline">Helpline</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="medical_reports">Medical Records</string>
    <string name="helpline">Helpline</string>
    <string name="phone_number_1">0322-6291-630</string>
    <string name="phone_number_2">042-3221-0000</string>

    <string name="ic_clock">\uF017</string> <!-- Unicode for the clock icon -->
</resources>