<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="?attr/colorPrimary"
    android:gravity="center">

    <!-- Home Button -->
    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_home"
        android:contentDescription="@string/nav_home"

        android:layout_weight="1"
        android:padding="16dp" />

    <!-- Appointments Button -->
    <ImageButton
        android:id="@+id/appointments_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_appointments"
        android:contentDescription="@string/nav_appointments"

        android:layout_weight="1"
        android:padding="16dp" />

    <!-- Medical Records Button -->
    <ImageButton
        android:id="@+id/medical_records_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_medical_records"
        android:contentDescription="@string/nav_medical_records"

        android:layout_weight="1"
        android:padding="16dp" />

    <!-- Helpline Button -->
    <ImageButton
        android:id="@+id/helpline_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_helpline"
        android:contentDescription="@string/nav_helpline"

        android:layout_weight="1"
        android:padding="16dp" />

</LinearLayout>
