<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    >

    <!-- Left Menu Button -->
    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:scaleType="fitCenter"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/menu"
        android:contentDescription="@string/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"/>

    <!-- Center Logo -->
    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/menu_button"
        app:layout_constraintEnd_toStartOf="@id/notification_icon"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- Notification Icon -->
    <ImageButton
        android:id="@+id/notification_icon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/notification"
        android:scaleType="fitCenter"
        android:contentDescription="@string/notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
